src/index.css
@import "tailwindcss";

@theme {
  --font-inter:
    "Inter", ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Arial,
    "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
  --font-play: "Play", var(--font-inter);
}

@utility font-inter {
  font-family: var(--font-inter);
}

@utility font-play {
  font-family: var(--font-play);
}

body {
  @apply bg-black font-inter text-white;
}

html,
body {
  overflow-x: hidden;
}

